@@ -1,0 +1,7 @@
+{
+"name" : "Save History Plugin",
+"version" : "0.0.1",
+"dependencies" : []
+}
+
+
