@@ -41,15 +41,15 @@ void Highlighter::resetRules(void)
 		return;
 	this->highlightingRules.clear();
 
-
-//new format
-	this->langPlugins[this->currentPlug].instance->setLanguageRules(&(this->highlightingRules));
 //toolkit
 	for(int j=0;j<this->toolkitPlugins.count();j++)
 		{
 			if(this->toolkitPlugins[j].langName.contains(this->langPlugins[this->currentPlug].langName)==true)
 				this->toolkitPlugins[j].instanceTK->setToolkitRules(&(this->highlightingRules));
 		}
+
+//new format
+	this->langPlugins[this->currentPlug].instance->setLanguageRules(&(this->highlightingRules));
 
 //mult line comment format
 	this->langPlugins[this->currentPlug].instance->setMultLineFormatStart(&(this->multiLineCommentStart));
@@ -341,6 +341,7 @@ void Highlighter::setTheme(QString themename)
 
 	return;
 }
+
 
 
 
