@@ -1,6 +1,7 @@
 0.7.0
-language plugin tweaks.
-Splash screen removed on showing barberpole.
+Added SaveHistory plugin.
+Language plugin tweaks.
+Splash screen closed on showing barberpole.
 Fixed hang in recent files if file unavailable.
 Clicking 'Apply' in plugin pefs now updates prefs file immediately.
 Added splash screen.
@@ -830,6 +831,7 @@ Updated Help file.
 
 0.0.4
 1st release
+
 
 
 
